# taskmgr

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  _philosophie_touches_finales.txt  build.sh  build_and_run_asan.sh  build_appimage.sh  build_deb.sh  configure.ac  convert_images.py
data/: taskmgr.1  taskmgr.1.in  taskmgr.desktop  taskmgr.desktop.in
src/: Makefile.am  about_dialog.cpp  about_dialog.h  app_icons.cpp  app_icons.h  app_manager.c  app_manager.h  autostart_manager.c  autostart_manager.h  backend_bridge.c  backend_bridge.h  common.h  compact_app_list.cpp  compact_app_list.h  cpu_tray_icon.cpp  cpu_tray_icon.h  dialog_pool.c  dialog_pool.h  disk_manager.c  disk_manager.h  fast_format.c  fast_format.h  functions.c  functions.h  gpu_stats.c  gpu_stats.h  info_block_widget.cpp  info_block_widget.h  main.cpp  manager_common.c  manager_common.h  manager_registry.c  manager_registry.h  mini_block_widget.cpp  mini_block_widget.h  network_manager.c  network_manager.h  performance_graph_widget.cpp  performance_graph_widget.h  performance_tab.cpp  (+50 more)
src/mvc/: tqtabstractitemmodel.cpp  tqtabstractitemmodel.h  tqtabstractlistmodel.cpp  tqtabstractlistmodel.h  tqtcellstyle.h  tqtcommon_p.h  tqtliststore.cpp  tqtliststore.h  tqtmodelindex.h  tqtmvctableview.cpp  tqtmvctableview.h  tqtmvctreeview.cpp  tqtmvctreeview.h  tqttreestore.cpp  tqttreestore.h
src/prodbuild/: qxtask  stub_vars.h
